fixed spacing on multiple pages

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -15,17 +15,18 @@
     position: top;
     grid-template-columns: 2fr 1fr;
     z-index: 150;
-    width: 100vw;
+    width: 100%;
 }
 .footer {
     padding: 1em;
     display: grid;
     grid-template-columns: 1fr 1fr;
     bottom: 0;
-    position: fixed;
+    /* position: fixed; */
     z-index: 150;
     _position: absolute;
     width: 98%;
+    margin-top: 1em;
 }
 .footer__container {
     display: flex;
@@ -57,15 +58,24 @@
     max-width: 200px;
 }
 .category__business--title, .contact__title, .team__title, .index__category--title, .index__spot-light--title, .individual-store__title {
-    margin: 2em;
+    margin: 1em;
 }
-.category__business--container-list, .contact__container, .team__ul_container {
+.category__business--container-list, .team__ul_container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
     margin-top: 1rem;
 }
+.contact__container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-top: 8rem;
+    margin-bottom: 8.5rem;
+}
+
 .category__business--list-item {
     padding: 1rem;
 }
@@ -95,17 +105,16 @@
     border-radius: 5px;
     max-width: 40%;
     padding: 2em;
-    margin: 2em;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 1rem;
-    
+    margin-top: 4rem;
+    margin-bottom: 2rem;
 }
 .index__circle_container {
     position: relative;
     width: 24em;
-    height: 24em;
-    padding: 2.8em;
+    height: 12.5em;
+    padding: 2.8em 2.8em 1em 2.8em;
     margin: 1.75em auto 0;
 }
 .index__circle_container a {
@@ -175,19 +184,15 @@ input[type="text"], select {
     width: 40em;
 }
 .business_list-item {
-    width: 1000px;
+    width: 100%;
 }
 .business__owner_container input[type="text"] {
     display: flex;
     justify-content: space-evenly;
-    width: 25em;
     font-size: large;
 }
 .index__category--title {
     margin-bottom: 7em;
-}
-.index__spot-light {
-    margin: 13em 0 10em;
 }
 input[type="text"], select {
     width: 100%;
@@ -212,7 +217,7 @@ input[type="text"], select {
         display: block;
         position: top;
         z-index: 150;
-        width: 100vw;
+        width: 100%;
     }
 } 
 .hidden {
